--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "flatpickr": "^4.6.6",
         "vue-bootstrap-datetimepicker": "^5.0.1"
     }
 }
